selkies-apps/audacity-soupmix-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audacity-soupmix
  namespace: selkies-apps
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    name: audacity-soupmix
