selkies-apps/base-webserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catchall-web
  namespace: selkies-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catchall-web
  template:
    metadata:
      labels:
        app: catchall-web
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: config-volume
        configMap:
          name: catchall-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: catchall-service
  namespace: selkies-apps
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: catchall-web
