selkies-apps/selkies-apps-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: selkies-apps
  name: selkies-apps
  namespace: selkies-apps
spec:
  gatewayClassName: istio
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: selkies-apps-certificate
        mode: Terminate
