selkies-apps/selkies-apps-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: selkies-apps
  name: selkies-apps
  namespace: selkies-apps
spec:
  hostnames:
    - apps.raft.lutris.house
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: selkies-apps
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: audacity-alice
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /alice/audacity/
    - backendRefs:
        - group: ""
          kind: Service
          name: audacity-soupmix
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /soupmix/audacity/
    - backendRefs:
        - group: ""
          kind: Service
          name: catchall-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
