selkies-apps/selkies-apps-authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: selkies-apps
  namespace: selkies-apps
spec:
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - apps.raft.lutris.house
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: selkies-apps
